[package]
name = "chip8"
version = "0.1.0"
edition = "2021"

[dependencies]
audio = "0.2.0"
clap = { version = "4.5.26", features = ["derive"] }
macroquad = { version = "0.4.13", features = ["audio"] }
num_enum = "0.7.3"
rand = "0.8.5"
strum = "0.26.3"
strum_macros = "0.26.4"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
